# first-year-projects

./: .gitignore  README.md  deploy_to_github.sh
acorn-ecosphere/: README.md  download-node.cjs  download-node.mjs  index.html  package-lock.json  package.json  run.bat  tailwind.config.js
acorn-ecosphere/src/: App.tsx  index.css
air-canvas-raycaster/: README.md
air-canvas-raycaster/raycaster-engine/: game.js  index.html  style.css
air-canvas-raycaster/tracker/: main.py  requirements.txt
heuristic-chess-engine/: README.md  app.py  main.py  requirements.txt  search.py
heuristic-chess-engine/backup/: app.py  evaluate.py  main.py  search.py
heuristic-chess-engine/frontend/: index.html  script.js  style.css
hybrid-disaster-ecosystem/: README.md
hybrid-disaster-ecosystem/cloud-functions/: firebase.json  package.json
hybrid-disaster-ecosystem/database/: firestore.rules  sample-payloads.json  schema.md
hybrid-disaster-ecosystem/rtdrcp-portal/: next.config.js  package-lock.json  package.json  tailwind.config.js
hybrid-disaster-ecosystem/sankat-mochan-app/: App.js  package.json
multi-dnn-gesture-pipeline/: README.md  main.py  requirements.txt  test_mp.py
multi-dnn-gesture-pipeline/cpp_inference/: CMakeLists.txt
multi-dnn-gesture-pipeline/cpp_inference/include/: OnnxWrapper.h
multi-dnn-gesture-pipeline/cpp_inference/src/: OnnxWrapper.cpp  main.cpp
owlmind-ai-quest/: README.md  index.html  package.json
owlmind-ai-quest/automation/: deploy_netlify.py
owlmind-ai-quest/css/: animations.css
owlmind-ai-quest/js/: admin.js  app.js  auth.js  mentor.js  (+7 more)
(+46 files in other folders)
